Fix card color in dark mode

--- a/src/assets/theme.scss
+++ b/src/assets/theme.scss
@@ -285,7 +285,7 @@ $p2-svg: "data:image/svg+xml," +
   --c1: #{$dark-gray700};
   --c1-text: #{$dark-gray-text-primary};
   --c1-drop-shadow: #{$shadow-on-dark-gray700};
-  --c1-card: #{$dark-gray800};
+  --c1-card: #{$dark-gray600};
   --c1-card-text: #{$dark-gray-text-primary};
   --c1-card-drop-shadow: #{$drop-shadow-on-dark-gray700};
 
